--- a/web_hellowhale/Jenkinsfile
+++ b/web_hellowhale/Jenkinsfile
@@ -6,14 +6,14 @@ pipeline {
 
     stage('Checkout Source') {
       steps {
-        git url:'https://github.com/vamsijakkula/hellowhale.git', branch:'master'
+        git url:'https://github.com/kunchalavikram/hellowhale.git', branch:'master'
       }
     }
     
       stage("Build image") {
             steps {
                 script {
-                    myapp = docker.build("vamsijakkula/hellowhale:${env.BUILD_ID}")
+                    myapp = docker.build("kunchalavikram/hellowhale:${env.BUILD_ID}")
                 }
             }
         }
