--- a/micro-service-starter/docker_code/shoes-microservice-spring-boot/Dockerfile
+++ b/micro-service-starter/docker_code/shoes-microservice-spring-boot/Dockerfile
@@ -5,6 +5,6 @@ RUN mvn clean package
 
 FROM openjdk:11.0.10-jre
 WORKDIR /app
-COPY --from=MAVEN_BUILD /app/target/shoes-0.0.1-SNAPSHOT .
+COPY --from=MAVEN_BUILD /app/target/shoes-0.0.1-SNAPSHOT.jar .
 EXPOSE 1002
-CMD ["java", "-jar", "shoes-0.0.1-SNAPSHOT"]
+CMD ["java", "-jar", "shoes-0.0.1-SNAPSHOT.jar"]
