--- a/micro-service-starter/docker_code/zuul-api-gateway/src/main/resources/application.yml
+++ b/micro-service-starter/docker_code/zuul-api-gateway/src/main/resources/application.yml
@@ -4,13 +4,13 @@ zuul:
   routes:
     offer:
       path: /offer/**
-      url: http://offers:1001/api/v1
+      url: http://172.31.10.65:1001/api/v1
     shoe:
       path: /shoe/**
-      url: http://shoes:1002/api/v1
+      url: http://172.31.10.65:1002/api/v1
     wishlist:
       path: /wishlist/**
-      url: http://wishlist:5000
+      url: http://172.31.10.65:5000
     cart:
       path: /cart/**
-      url: http://cart:1004/api/v1
+      url: http://172.31.10.65:1004/api/v1
