--- a/java/docker-multi-stage-build-demo/Dockerfile
+++ b/java/docker-multi-stage-build-demo/Dockerfile
@@ -1,17 +1,10 @@
-# the first stage of our build will use a maven 3.6.1 parent image 
-FROM maven:3.6.1-jdk-8-alpine AS MAVEN_BUILD 
+FROM maven:3.6.3-jdk-8 as BUILD
+WORKDIR /app
+COPY . .
+RUN mvn clean package  
 
-# copy the pom and src code to the container 
-COPY ./ ./  
+FROM openjdk:8-jre-alpine3.9
+WORKDIR /app
+COPY --from=BUILD /app/target/demo-0.0.1-SNAPSHOT.jar .
+ENTRYPOINT ["java", "-jar", "/app/demo-0.0.1-SNAPSHOT.jar"]
 
-# package our application code 
-RUN mvn clean package 
-
-# the second stage of our build will use open jdk 8 on alpine 3.9 
-FROM openjdk:8-jre-alpine3.9 
-
-# copy only the artifacts we need from the first stage and discard the rest 
-COPY --from=MAVEN_BUILD /docker-multi-stage-build-demo/target/demo-0.0.1-SNAPSHOT.jar /demo.jar 
-
-# set the startup command to execute the jar 
-CMD ["java", "-jar", "/demo.jar"]
