--- a/go_helloworld/Dockerfile
+++ b/go_helloworld/Dockerfile
@@ -1,5 +1,9 @@
-FROM golang:1.16-alpine
+FROM golang:1.16-alpine as build
 WORKDIR /app
 COPY main.go .
 RUN go build main.go
-CMD [ "/main" ]
+
+FROM alpine:latest
+WORKDIR /app
+COPY --from=build /app/main .
+ENTRYPOINT ["/app/main"]
