--- a/python_flask/Dockerfile
+++ b/python_flask/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:latest
+ARG TAG=3.8.13-slim
+FROM python:$TAG
 RUN pip install flask
 WORKDIR /app
 COPY app.py .
@@ -7,3 +8,5 @@ HEALTHCHECK --interval=1m --timeout=30s \
             --start-period=30s --retries=3 \    
            CMD curl -f http://localhost:5000/health || exit 1
 ENTRYPOINT ["python", "app.py"]
+
+
