--- a/08-Multistage-Go/Dockerfile.multistage
+++ b/08-Multistage-Go/Dockerfile.multistage
@@ -1,31 +1,13 @@
-##
-## Build
-##
-
 FROM golang:1.16-buster AS build
-
 WORKDIR /app
-
-COPY go.mod .
-COPY go.sum .
+COPY go.mod go.sum ./
 RUN go mod download
-
 COPY *.go ./
-
 RUN go build -o /docker-gs-ping
 
-##
-## Deploy
-##
-
 FROM gcr.io/distroless/base-debian10
-
 WORKDIR /
-
 COPY --from=build /docker-gs-ping /docker-gs-ping
-
 EXPOSE 8080
-
 USER nonroot:nonroot
-
 ENTRYPOINT ["/docker-gs-ping"]
