--- a/17-python_todo_app/compose.yml
+++ b/17-python_todo_app/compose.yml
@@ -3,11 +3,11 @@ services:
     container_name: web
     build: .
     ports:
-        - "5000:5000"
-    depends_on: ["mysql"]
+    - "5000:5000"
+    depends_on: 
+    - "mysql"
     environment:
       DATABASE_URI: "mysql+pymysql://root:admin123@mysql:3306/todo"
-      INTIAL_DELAY: "10"
   mysql:
     container_name: mysql
     image: "mysql:5.7"
